# web-phisher

./: Cargo.backup.toml  Cargo.toml  LICENSE  README.md
src/: html_mod.rs  main.rs  menus.rs  parser.rs  server.rs  site_downloader.rs
