[package]
name = "web-phisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
actix-cors = "0.6.0-beta.1"

serde = "1.0"
serde_json = "1.0"

local-ip-address = "0.5.5"
